src/tests/fixtures/field_definitions/ReferenceNonGraphQLType.ts.expected
-----------------
INPUT
----------------- 
type SomeUndefienedType = {};

/** @gqlType */
class Query {
  /** @gqlField */
  somePropertyField: SomeUndefienedType;
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/field_definitions/ReferenceNonGraphQLType.ts:6:22 - error: This type is not a valid GraphQL type. Did you mean to annotate it's definition with a `/** @gql */` tag such as `/** @gqlType */` or `/** @gqlInput **/`?

6   somePropertyField: SomeUndefienedType;
                       ~~~~~~~~~~~~~~~~~~
